# art-disign_planfix

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test.py
app/: dependencies.py
app/api/v1/: endpoints.py
app/bitrix/: bitrix_client.py
app/core/: config.py
app/planfix/: planfix_client.py
app/services/: bitrix_deal_processor.py
app/shemas/: shemas.py
